--- a/00 - Ausgangsbasis/styles/main.css
+++ b/00 - Ausgangsbasis/styles/main.css
@@ -831,11 +831,13 @@ input[type="name"]:focus {
     display: block;
     background-color: #014153;
     font-size: 1rem;
+    font-family: "Montserrat", sans-serif;
     padding-left: 2rem;
     padding-right: 2rem;
     margin-left: auto;
     margin-right: auto;
     border-style:hidden;
+
 }
 
 @media (min-width: 62em) {
@@ -885,7 +887,7 @@ input[type="name"]:focus {
 }
 
 .footer__text {
-    text-decoration: dotted;
+    text-decoration: none;
     color: #014153;
     font-size: 1rem;
     font-weight: 500;
@@ -893,3 +895,6 @@ input[type="name"]:focus {
     padding-left: 0.5rem;
 }
 
+a.footer__text:hover {
+    text-decoration: underline;
+}
